# asksachi-sdk

./: .gitignore  README.md  pyproject.toml
my-agent/: README.md  pyproject.toml
my-agent/skills/asksachi-contract-guard/: SKILL.md
my-agent/src/my_agent/: agent.py
my-agent/tests/: test_smoke.py
skills/asksachi-contract-guard/: SKILL.md
src/asksachi_sdk/: __init__.py  models_openai.py
src/asksachi_sdk/a2a/: __init__.py  http_json.py
src/asksachi_sdk/agents/: __init__.py  registry.py
src/asksachi_sdk/samples/echo_agent/: __init__.py  echo_agent.py  surface_api.py  surface_cli.py
src/asksachi_sdk/scaffold/: __init__.py  init.py
src/asksachi_sdk/workflow_kit/: __init__.py  a2a_app.py  chat_agent.py  cli.py  spec.py  uvicorn_cli.py
tests/: test_scaffold_init.py  test_sdk_a2a.py  test_sdk_workflow_kit.py
