[project]
name = "asksachi-sdk"
version = "0.1.1"
description = "AskSachi SDK — shared A2A protocol primitives and workflow-kit building blocks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.4.0",
]

[project.scripts]
echo-agent       = "asksachi_sdk.samples.echo_agent.surface_cli:main"
echo-agent-serve = "asksachi_sdk.samples.echo_agent.surface_api:serve_main"
asksachi-init    = "asksachi_sdk.scaffold.init:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/asksachi_sdk"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
