[project]
name = "my-agent"
version = "0.1.0"
description = "A simple AskSachi-compatible agent."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asksachi-sdk @ file:///Users/skarkala/Learning/CS-QBR-Automation/asksachi-sdk",
]

[project.scripts]
my-agent-cli = "my_agent.agent:cli_main"
my-agent-serve = "my_agent.agent:serve_main"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_agent"]
